# multi-task-nlp

./: .gitignore  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: test.yml
misc/: explore_atis.ipynb  token_classification_preprocessing.ipynb
src/multi_task_nlp/: __init__.py  cli.py  config.py  data_module.py  data_module_atis.py  intent_classification.py  lightning_module.py  multi_task_nlp.py  token_classification.py  train_atis.py  util.py
tests/: __init__.py  test_multi_task_nlp.py
